# teste_tecnico_a3data

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  eda.ipynb  justfile  main.py  pyproject.toml
.streamlit/: config.toml
config/: logging.py
src/: assistant.py  chat_interface.py  file_upload.py  logging.py  preprocess.py  vector_store.py
src/core/: assistant.py  vector_store.py
src/ui/: chat_interface.py  file_upload.py
