[project]
name = "teste-tecnico-a3data"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Leão",email = "heylucasleao@gmail.com"}
]
requires-python = ">=3.11,<3.15"

[tool.poetry.dependencies]
ipykernel = "^6.30.1"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
pypdf = "^6.0.0"
nvidia-cusparselt-cu12 = "0.7.1"
sentence-transformers = "^5.1.0"
langchain-huggingface = "^0.3.1"
faiss-cpu = "^1.12.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
